--- a/README.html
+++ b/README.html
@@ -6,7 +6,7 @@
 <body>
 <h1 id="landingpage">LandingPage</h1>
 
-<h3 id="thisissomefunhtmlcsspractice">This is some fun HTML/CSS practice</h3>
+<h3 id="thisissomefunhtmlcsspracticewithscssandcodekit">This is some fun HTML/CSS practice with SCSS and CodeKit !!!</h3>
 
 </body>
 </html>
